--- a/app/src/main/res/layout/activity_rawmaterial.xml
+++ b/app/src/main/res/layout/activity_rawmaterial.xml
@@ -13,6 +13,7 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/ll_content"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal"
@@ -53,6 +54,17 @@
             android:orientation="vertical">
 
         </LinearLayout>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/ll_bottom"
+        android:layout_width="match_parent"
+        android:layout_height="20dp"
+        android:layout_gravity="bottom"
+        android:background="@color/title_blue"
+        android:orientation="horizontal">
+
     </LinearLayout>
 </LinearLayout>
 
