--- a/app/src/main/res/values-w820dp/dimens.xml
+++ b/app/src/main/res/values-w820dp/dimens.xml
@@ -18,10 +18,23 @@
     <dimen name="logo_width">30dp</dimen>
     <dimen name="logo_margin_width">34dp</dimen>
 
-    <!--字体大小-->
+    <!--table title text size-->
     <dimen name="title_text_size">22sp</dimen>
-    <dimen name="big_text_size">22sp</dimen>
     <dimen name="middle_text_size">22sp</dimen>
+
+
+    <dimen name="title_title_size">18sp</dimen>
+
+    <dimen name="title_small_size">10sp</dimen>
+    <dimen name="title_time_size">16sp</dimen>
+    <dimen name="title_notice_size">16sp</dimen>
+
+
+    <!--看板的间隔距离-->
+    <dimen name="padding_left">10dp</dimen>
+    <dimen name="padding_right">10dp</dimen>
+
+    <dimen name="big_text_size">22sp</dimen>
     <dimen name="cell_data_text_size">22sp</dimen>
     <dimen name="small_text_size">22sp</dimen>
 </resources>
