--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -22,4 +22,14 @@
     <color name="holo_green_dark">#ff669900</color>
     <color name="holo_orange_dark">#ffff8800</color>
     <color name="holo_blue_bright">#ff00ddff</color>
+
+
+    <color name="title_dark">#ff313131</color>
+    <color name="title_green">#ff007130</color>
+    <color name="title_blue">#ff0076a2</color>
+
+    <color name="bg_content_drak">#ffeeeeee</color>
+    <color name="bg_content_light">#ffffffff</color>
+
+
 </resources>
