--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -16,12 +16,26 @@
 
 
     <!--字体大小-->
-    <dimen name="title_text_size">16sp</dimen>
+    <dimen name="title_text_size">12sp</dimen>
+    <dimen name="middle_text_size">12sp</dimen>
+
+
+    <!--看板的间隔距离-->
+    <dimen name="padding_left">10dp</dimen>
+    <dimen name="padding_right">10dp</dimen>
+
+
+    <dimen name="title_title_size">10sp</dimen>
+
+
+    <dimen name="title_small_size">10sp</dimen>
+    <dimen name="title_time_size">10sp</dimen>
+    <dimen name="title_notice_size">12sp</dimen>
+
+
     <dimen name="big_text_size">16sp</dimen>
-    <dimen name="middle_text_size">14sp</dimen>
     <dimen name="cell_data_text_size">18sp</dimen>
     <dimen name="small_text_size">18sp</dimen>
-
 
 
 </resources>
