--- a/app/src/main/res/layout/activity_rawmaterial.xml
+++ b/app/src/main/res/layout/activity_rawmaterial.xml
@@ -15,7 +15,7 @@
     <LinearLayout
         android:id="@+id/ll_content"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:weightSum="4">
 
@@ -60,8 +60,7 @@
     <LinearLayout
         android:id="@+id/ll_bottom"
         android:layout_width="match_parent"
-        android:layout_height="20dp"
-        android:layout_gravity="bottom"
+        android:layout_height="wrap_content"
         android:background="@color/title_blue"
         android:orientation="horizontal">
 
