--- a/app/src/main/res/layout/activity_allmachine.xml
+++ b/app/src/main/res/layout/activity_allmachine.xml
@@ -27,6 +27,14 @@
         android:layout_height="match_parent"
         android:scrollbars="vertical" />
 
+    <LinearLayout
+        android:id="@+id/ll_bottom"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/title_blue"
+        android:orientation="horizontal">
+
+    </LinearLayout>
 </LinearLayout>
 
 
