--- a/app/src/main/res/layout/activity_semimaterial.xml
+++ b/app/src/main/res/layout/activity_semimaterial.xml
@@ -13,6 +13,7 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/ll_content"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal"
@@ -94,6 +95,15 @@
             android:layout_weight="1"
             android:background="@color/rawmaterial_light"
             android:orientation="horizontal" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/ll_bottom"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/title_blue"
+        android:orientation="horizontal">
+
     </LinearLayout>
 </LinearLayout>
 
