fix ui & save sp about hostname

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:hint="默认host：http://mes.seekersoft.cn/"
+        android:text="http://mes.seekersoft.cn/"
         android:textSize="14sp" />
 
     <EditText
