--- a/app/src/main/res/values-w820dp/dimens.xml
+++ b/app/src/main/res/values-w820dp/dimens.xml
@@ -23,16 +23,19 @@
     <dimen name="middle_text_size">22sp</dimen>
 
 
-    <dimen name="title_title_size">18sp</dimen>
+    <dimen name="title_title_size">23sp</dimen>
 
-    <dimen name="title_small_size">10sp</dimen>
-    <dimen name="title_time_size">16sp</dimen>
-    <dimen name="title_notice_size">16sp</dimen>
+    <dimen name="title_small_size">15sp</dimen>
+    <dimen name="title_time_size">21sp</dimen>
+    <dimen name="title_notice_size">22sp</dimen>
 
 
     <!--看板的间隔距离-->
-    <dimen name="padding_left">10dp</dimen>
+    <dimen name="padding_left">18dp</dimen>
+    <dimen name="text_padding_left">8dp</dimen>
     <dimen name="padding_right">10dp</dimen>
+
+    <dimen name="notice_icon_margin_left">10dp</dimen>
 
     <dimen name="big_text_size">22sp</dimen>
     <dimen name="cell_data_text_size">22sp</dimen>
